@@ -1222,3 +1222,16 @@ Info: The implementation of the "Debian Maintainers" GR has changed
  .
  Instead these permissions are granted via "dak-commands" files.
 Ref: https://lists.debian.org/debian-devel-announce/2012/09/msg00008.html
+
+Tag: needless-suggest-recommend-libservlet-java
+Severity: normal
+Certainty: certain
+Info: Package should not suggest or recommend libservlet-java
+ Java servlets are only used in the context of a server (example: Tomcat or
+ Jetty). This server will have this dependency and will take care of the
+ loading of this package with the right libservlet.
+ .
+ Removing this dependency will fix this warning.
+ .
+ If there is otherwise a valid reason for this suggestion or recommendation,
+ please override the tag.
