@@ -24,6 +24,8 @@ lintian (2.5.22.2) UNRELEASED; urgency=medium
       /usr/share/java and the package name matches
       lib.*maven.*plugin.*java.
     + [SL] Catch uses of Java8 byte code
+    + [SL] Warn that the suggests/recommends on libservlet[\d\.]+-java is
+      needless (Closes: #743453)
   * data/java/constants:
     + [SL] introduce this file to specify JDK values
 
